<resources>
    <string name="app_name">2DO</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Max Mustermann</string>
    <string name="nav_header_subtitle">max.mustermann@fh-erfurt.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="show_tasks">show tasks</string>
    <string name="task_name">Task Name</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="duration">Duration</string>
    <string name="select_category">Select Category</string>
    <string name="check_task">check_task</string>
    <string name="image_task">image_task</string>
    <string name="save_task">save Task</string>
    <string name="category_name">Category Name</string>
    <string name="save_category">save category</string>
    <string name="select_color">Select Color</string>
    <string name="select_a_color">Select a Color</string>
    <string name="image_category">Image Category</string>
    <string name="preview">Preview</string>
    <string name="tasks">tasks</string>
    <string name="categories">categories</string>
    <string name="settings">settings</string>
    <string name="logout">Logout</string>
    <string name="cooking">COOKING</string>
    <string name="travel">TRAVEL</string>
    <string name="_08_00_12_00">08:00 – 12:00</string>
    <string name="inputName">Enter your username (email)</string>
    <string name="inputPassword">Enter your Password</string>
    <string name="noAccount">if you don\'t have an Account, please contact the Admin </string>
    <string name="enter">Enter</string>
    <string name="logo">Logo</string>

    <string-array name="Category_arrays">
        <item>Travel</item>
        <item>Work</item>
        <item>Study</item>
        <item>Cooking</item>
        <item>Fitness</item>
    </string-array>
    <string name="category_prompt">Select a Category: </string>
    <string name="select_predefined_color">Select a Predefined Color</string>
    <string name="save_block">save Block</string>
    <string name="block_name">Block Name</string>
    <string name="start">Start</string>
    <string name="finish">Finish</string>
    <string name="fixed">Fixed</string>
    <string name="blocks">Blocks</string>
    <string name="home">Home</string>
    <string name="splash_text">TO DO IS TO BE</string>
    <string name="confirm">Confirm</string>
    <string name="addCategory">Add Category</string>
    <string name="addBlock">Add Block</string>
    <string name="block_prompt">Select a Block</string>
    <string name="deadline">Deadline</string>

    /*************Colors for Tasks************/
        <string-array name="color_picker">
            <item name="picker_1">#F6402C</item>
            <item name="picker_2">#EB1460</item>
            <item name="picker_3">#9C1AB1</item>
            <item name="picker_4">#6633B9</item>
            <item name="picker_5">#3D4DB7</item>
            <item name="picker_6">#1093F5</item>
            <item name="picker_7">#00A6F6</item>
            <item name="picker_8">#00BBD5</item>
            <item name="picker_9">#009687</item>
            <item name="picker_10">#46AF4A</item>
            <item name="picker_11">#88C440</item>
            <item name="picker_12">#CCDD1E</item>
            <item name="picker_13">#FFEC16</item>
            <item name="picker_14">#FFC100</item>
            <item name="picker_15">#FF9800</item>
            <item name="picker_16">#FF5505</item>
            <item name="picker_17">#7A5547</item>
            <item name="picker_18">#9D9D9D</item>
            <item name="picker_19">#5E7C8B</item>
        </string-array>
    /****************************************/

</resources>