<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/home"/>
        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/ic_apps_grey_500_24dp"
            android:title="@string/categories"/>
        <item
            android:id="@+id/nav_blocks"
            android:icon="@drawable/ic_assignment_black_48dp"
            android:title="@string/blocks"/>

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_setting"
            android:title="@string/settings"/>

    </group>
</menu>