<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_new_block_category">


    <LinearLayout
        android:id="@+id/add_block_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/block_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:hint="@string/block_name"
                android:inputType="text" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@color/primaryColor" />

        <LinearLayout
            android:id="@+id/block_params"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/block_date_select"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawablePadding="5dp"
                android:gravity="center_vertical"
                android:text="@string/date"
                app:drawableLeftCompat="@android:drawable/ic_menu_my_calendar" />

            <TextView
                android:id="@+id/block_start_select"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawablePadding="5dp"
                android:gravity="center_vertical"
                android:text="@string/start"
                app:drawableLeftCompat="@android:drawable/ic_lock_idle_alarm" />

            <TextView
                android:id="@+id/block_finish_select"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawablePadding="5dp"
                android:gravity="center_vertical"
                android:text="@string/finish"
                app:drawableLeftCompat="@android:drawable/ic_lock_idle_alarm" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@color/primaryColor" />

        <LinearLayout
            android:id="@+id/block_category_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp">

            <TextView
                android:id="@+id/block_category_output"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:text="@string/category_prompt" />

            <Spinner
                android:id="@+id/block_category_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/Category_arrays"
                android:prompt="@string/category_prompt" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@color/primaryColor" />

        <LinearLayout
            android:id="@+id/block_save_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center">

            <Button
                android:id="@+id/block_save_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/primaryColor"
                android:text="@string/save_block"
                android:textColor="@color/white" />

        </LinearLayout>


    </LinearLayout>

</androidx.core.widget.NestedScrollView>
