<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_new_category">


    <LinearLayout
        android:id="@+id/add_category_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/category_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:hint="@string/category_name"
                android:inputType="text" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@color/primaryColor" />


        <LinearLayout
            android:id="@+id/category_color_select"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp">

            <ImageButton
                android:id="@+id/category_color_btn"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/category_butt"
                android:checkable="true"
                android:elevation="2dp"/>

            <TextView
                android:id="@+id/category_text_output"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginStart="5dp"
                android:text="@string/select_a_color"/>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/category_save_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center">

            <Button
                android:id="@+id/save_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_category"
                android:backgroundTint="@color/primaryColor"
                android:textColor="@color/white"/>

        </LinearLayout>


    </LinearLayout>

</androidx.core.widget.NestedScrollView>
